--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,5 @@
-/*
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video {
-  border:0;
-  font:inherit;
-  font-size:100%;
-  margin:0;
-  padding:0;
-  vertical-align:baseline;
-}
-*/
-
-
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
-display:block;
-}
-
-html, body {
-	background: #fff;
-	font-family: 'Lato', helvetica, arial, sans-serif;
-	font-size: 16px; color: #222;
+body, head, p, li {
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .no-js #loader {
@@ -31,42 +13,43 @@ html, body {
   top: 0; }
 
 #loading {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 999999;
-    background: url('images/loader.gif') center no-repeat #000;
-    background-size: cover;
-    opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 999999;
+  background-size: cover;
+  opacity: 0;
 }
 
-/* url(http://smallenvelop.com/wp-content/uploads/2014/08/Preloader_11.gif)
-
-images/loader.svg
-
-	background: url(images/loader.gif) center no-repeat #fff;
-  background: images/loader.gif center no-repeat #fff;
-  .se-pre-con {
-  	position: fixed;
-  	left: 0px;
-  	top: 0px;
-  	width: 100%;
-  	height: 100%;
-  	z-index: 9999;
-    background: url(https://media.giphy.com/media/3oeHLhzRkRX1bQQBPi/giphy.gif) center no-repeat #fff;
-
-  }
-  */
-
-
-.clear {
-	clear: both;
+hr {
+  color: #60abc1 !important;
 }
 
-.glyphicon {
-    font-size: 20px;
+.sectionTitle h1 {
+	font-family: 'Ubuntu', sans-serif;
+	font-style: italic;
+	font-size: 1.7em;
+	color: #60abc1;
+}
+
+.sectionContent h2 {
+	font-family: 'Ubuntu', sans-serif;
+	font-size: 1.4em;
+	color: #60abc1;
+}
+
+.sectionContent h4 {
+	font-family: 'Ubuntu', sans-serif;
+	font-size: 1.2em;
+	color: #60abc1;
+}
+
+.subDetails {
+	font-size: 0.9em;
+	font-style: italic;
+	margin-bottom: 1em;
 }
 
 p {
@@ -78,213 +61,60 @@ p {
 
 #cv {
 	width: 90%;
-	max-width: 800px;
 	background: #fff;
 	margin: 30px auto;
 }
 
 .mainDetails {
-	padding: 25px 35px;
-	border-bottom: 2px solid #60abc1;
-	background: #e8ebff;
+	border: 6px solid #6fa8ea;
+	background: #9bcdf3;
 }
 
 #name h1 {
 	font-size: 2.5em;
 	font-weight: 700;
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 	margin-bottom: -6px;
 }
 
 #name h2 {
 	font-size: 2em;
-	margin-left: 2px;
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 #mainArea {
-	padding: 0 40px;
+  background: #369ce8;
+  border: 6px solid #6fa8ea;
+}
+
+#mainLink {
+  margin-top: 4em;
+  background: #369ce8;
 }
 
 #headshot {
-	width: 25%;
-	float: left;
-	margin-right: 30px;
-  margin-top: 50px;
+  border-radius: 1em;
+  padding-left: 4.5em;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
 }
 
 #headshot img {
-	width: 100%;
-	height: auto;
-	-webkit-border-radius: 50%;
-	border-radius: 50%;
+  border-radius: 1em;
+  border: 0.1em solid #6fa8ea;
+  width: 160px;
 }
 
-#name {
-	float: left;
-}
-
-#contactDetails {
-	float: left;
-}
-
-#contactDetails ul {
-	list-style-type: none;
-	font-size: 0.9em;
-	margin-top: 2px;
-}
-
-#contactDetails ul li {
-	margin-bottom: 3px;
-	color: #444;
+.border {
+  border-radius: 1.5em;
 }
 
 #contactDetails ul li a, a[href^=tel] {
-	color: #444;
-	text-decoration: none;
 	-webkit-transition: all .3s ease-in;
 	-moz-transition: all .3s ease-in;
 	-o-transition: all .3s ease-in;
 	-ms-transition: all .3s ease-in;
 	transition: all .3s ease-in;
-}
-
-#contactDetails ul li a:hover {
-	color: #cf8a05;
-}
-
-section {
-	border-top: 1px solid #dedede;
-	padding: 20px 0 0;
-}
-
-section:first-child {
-	border-top: 0;
-}
-
-section:last-child {
-	padding: 20px 0 10px;
-}
-
-.sectionTitle {
-	float: left;
-	width: 25%;
-  color: #6fa8ea;
-}
-
-.sectionContent {
-	float: right;
-	width: 72.5%;
-}
-
-.sectionTitle h1 {
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
-	font-style: italic;
-	font-size: 1.5em;
-	color: #60abc1;
-}
-
-.sectionContent h2 {
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
-	font-size: 1.5em;
-	margin-bottom: -2px;
-}
-
-.subDetails {
-	font-size: 0.8em;
-	font-style: italic;
-	margin-bottom: 3px;
-}
-
-.keySkills {
-	list-style-type: none;
-	-moz-column-count:3;
-	-webkit-column-count:3;
-	column-count:3;
-	margin-bottom: 20px;
-	font-size: 1em;
-	color: #444;
-}
-
-.keySkills ul li {
-	margin-bottom: 3px;
-}
-
-@media all and (min-width: 602px) and (max-width: 800px) {
-	#headshot {
-		display: none;
-	}
-
-	.keySkills {
-	-moz-column-count:2;
-	-webkit-column-count:2;
-	column-count:2;
-	}
-}
-
-@media all and (max-width: 601px) {
-	#cv {
-		width: 95%;
-		margin: 10px auto;
-		min-width: 280px;
-	}
-
-	#headshot {
-		display: none;
-	}
-
-	#name, #contactDetails {
-		float: none;
-		width: 100%;
-		text-align: center;
-	}
-
-	.sectionTitle, .sectionContent {
-		float: none;
-		width: 100%;
-	}
-
-	.sectionTitle {
-		margin-left: -2px;
-		font-size: 1.25em;
-	}
-
-	.keySkills {
-		-moz-column-count:2;
-		-webkit-column-count:2;
-		column-count:2;
-	}
-}
-
-@media all and (max-width: 480px) {
-	.mainDetails {
-		padding: 15px 15px;
-	}
-
-	section {
-		padding: 15px 0 0;
-	}
-
-	#mainArea {
-		padding: 0 25px;
-	}
-
-	.keySkills {
-	-moz-column-count:1;
-	-webkit-column-count:1;
-	column-count:1;
-	}
-
-	#name h1 {
-		line-height: .8em;
-		margin-bottom: 4px;
-	}
-}
-
-@media print {
-    #cv {
-        width: 100%;
-    }
 }
 
 @-webkit-keyframes reset {
@@ -393,17 +223,17 @@ section:last-child {
 
 .instaLoad {
     -webkit-animation-name: reset, fade-out;
-    -webkit-animation-duration: 1.5s;
+    -webkit-animation-duration: 2s;
     -webkit-animation-timing-function: ease-in-out;
     -webkit-animation-fill-mode: forwards;
 
 	  -moz-animation-name: reset, fade-out;
-    -moz-animation-duration: 1.5s;
+    -moz-animation-duration: 2s;
     -moz-animation-timing-function: ease-in-out;
     -moz-animation-fill-mode: forwards;
 
 	  animation-name: reset, fade-out;
-    animation-duration: 1.5s;
+    animation-duration: 2s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
 }
